tests/integration/features/file_traceability/error_handling/02_source_file_references_non_existing_req/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output | filecheck %s --dump-input=fail

CHECK: error: Source file file.py references a requirement that does not exist: REQ-002.
